<resources>
    <string name="app_name">吾聊</string>
    <string name="robot_name">Turing</string>
    <string name="home_pager">首页</string>
    <string name="title_robot">Turing</string>
    <string name="title_set">Setting</string>
    <string name="default_name">WuLiao</string>
    <string name="nav_change_theme">切换主题</string>
    <string name="nac_setting">设置</string>
    <string name="nav_anout">关于我</string>
    <string name="nav_menu_search_word">词典</string>
    <string name="nav_menu_one">One一个</string>
    <string name="edit_hint">Type something to send...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="speaking">语音识别中...</string>
    <string name="speak">点击说话</string>
    <string name="fristdata">你好，我是Turing</string>
    <string name="response_infonull_error">你说什么,我没听清啊</string>
    <string name="response_exhasut_error">不好意思,今天妈妈不让我和别人说话了</string>
    <string name="action_copy_link">复制链接地址</string>
    <string name="action_open_in_browser">在浏览器中打开</string>

    <string name="loaded_failed">加载失败</string>
    <string name="loaded_success">加载成功</string>
    <string name="retry">重新加载</string>
    <string name="no_browser_found">没有找到浏览器</string>
    <string name="not_net_work">没有网络连接</string>

    <string name="setting_chat">语音设置</string>
    <string name="setting_isVoice">开启</string>
    <string name="setting_isVoice_summarg">开启语音播放</string>
    <string name="setting_voice_velocity">语速</string>
    <string name="setting_voice_volume">音量</string>
    <string name="setting_other_set">其他设置</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_title">设置</string>
    <string name="seeting_voice_man">发音人</string>

    <string name="about">关于</string>
    <string name="about_version">版本:V1.0</string>
    <string name="about_please">大三汪一只</string>
    <string name="about_name">Swy</string>
    <string name="about_anthor">关于我</string>
    <string name="about_support">反馈/支持</string>
    <string name="about_bug">反馈Bug</string>
    <string name="about_commit_bug">yeshuwei.swy@gmail.com</string>
    <string name="about_email">我的联系方式</string>
    <string name="about_thank">致谢</string>
    <string name="anout_thank_gank">致谢开发过程中指点迷津的人</string>
    <string name="about_Technical_support">支持</string>
    <string name="about_xfyun_support">语音技术由科大讯飞提供</string>


    <string name="copied_to_clipboard">复制成功</string>
    <string name="clear_success">清除成功</string>
    <string name="sendto">mailto:yeshuwei911@gmail.com</string>
    <string name="mail_topic">Gank使用反馈</string>
    <string name="device_model">手机型号</string>
    <string name="sdk_version">SDK版本</string>
    <string name="easter_egg">彩蛋</string>
    <string name="easter_egg_content">点这么多下我名字,是不是觉得我比较帅!</string>
    <string name="sure">肯定</string>
    <string name="yes">必须</string>
    <string name="no_app_store_found">没有邮件类App</string>

    <string name="one_version">4.0.2</string>
    <string name="one">一个</string>

    <!--Welcome Pager-->
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="onboarding_pre_button_description">Pre</string>
    <string name="onboarding_finish_button_description">进入</string>
    <string name="onboarding_next_button_description">Next</string>
    <string name="onboarding_read_pager">阅读像是良师益友</string>
    <string name="onboarding_read_pager_content">书富如入海,百货皆有。人之精力，不能兼收尽取，但得春所欲求者尔。故愿学者每次作一意求之</string>
    <string name="onboarding_search_pager">查询你所想知道的一切</string>
    <string name="onboarding_search_pager_content">单词?机票车票?天气?酒店?....你想知道的我都在努力知道</string>
    <string name="onboarding_chat_pager">陪伴你打发无聊的时间</string>
    <string name="onboarding_chat_pager_content">比男朋友贴心,比女朋友温柔.不做第三者，只做意中人.</string>
    <string name="onboarding_wait_lunch"><![CDATA[<string name=\"onboarding_finish_button_description_wait\">Preparing, please wait…</string>]]></string>
</resources>
